--- a/loginDesign.css
+++ b/loginDesign.css
@@ -152,7 +152,52 @@ td {
   margin-bottom: 1rem !important;
 }
 
-@media screen and (max-width: 700px) {
+/* Estilos para el pop-up */
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 70%);
+}
+
+.popup-content {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 3rem;
+  width: 30%;
+  height: 40%;
+  align-content: center;
+  text-align: center;
+  border-radius: 1rem;
+}
+
+#popup-text {
+  font: 1em sans-serif;
+}
+
+.close-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.copy-btn {
+  margin: 2rem auto 0;
+  padding: .5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1050px) {
 
   .container1,
   .container2 {
@@ -167,9 +212,14 @@ td {
   .my-5 {
     display: none;
   }
+
+  .popup-content {
+    width: 60%;
+    height: 40%;
+  }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 450px) {
 
   .container1 h1,
   .container2 h1 {
@@ -190,6 +240,12 @@ td {
   .container2 input[type="email"] {
     margin-bottom: 1rem;
     font-size: 0.8rem;
+  }
+
+  .popup-content {
+    padding: 1rem;
+    width: 80%;
+    height: 50%;
   }
 
 }
