--- a/Interfaces/Header/styles.css
+++ b/Interfaces/Header/styles.css
@@ -199,6 +199,14 @@ body {
     padding: 0.8rem 1.3rem !important;
 }
 
+@media screen and (max-width: 1600px) {
+
+    .header {
+        height: 11vh;
+    }
+}
+
+
 /* Ajustes para pantallas pequeñas */
 @media (max-width: 1420px) {
     .titulo-header {
