--- a/Interfaces/Acciones/tablas.css
+++ b/Interfaces/Acciones/tablas.css
@@ -122,7 +122,7 @@ h3 {
         display: block;
         margin-bottom: 1rem;
         border: 1px solid var(--primary-color);
-        border-radius: 8px;
+        border-radius: clamp(.4rem, .4vw, .4rem);
         padding: 1rem;
         background: white;
     }
