--- a/CSS/components/tablas.css
+++ b/CSS/components/tablas.css
@@ -140,6 +140,12 @@ h3 {
     .container-principal {
         height: 79vh;
     }
+
+    .inputs {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
 }
 
 @media screen and (max-width: 820px) {
@@ -154,7 +160,7 @@ h3 {
     }
 
     .inputs {
-        width: 27vw;
+        width: 40vw;
     }
 
     .checkbox {
